<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp">

    <Spinner
        android:id="@+id/property_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:prompt="@string/property_type_prompt" />

    <RadioGroup
        android:id="@+id/property_status_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    </RadioGroup>

    <Spinner
        android:id="@+id/bed_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:prompt="@string/bed_prompt" />

    <Spinner
        android:id="@+id/bath_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:prompt="@string/bath_prompt" />

    <EditText
        android:id="@+id/location_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Location" />

    <EditText
        android:id="@+id/price_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Description" />

    <ImageView
        android:id="@+id/property_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/addimg" />

    <Button
        android:id="@+id/add_property_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Add Property" />

</LinearLayout>